# openatlas/api/v02/swagger/class.yml
@@ -1,146 +1,82 @@
 Classes endpoint
 ---
+tags:
+  - Entities
+summary: Retrieves a list of Geojson representations for a specific CIDOC CRM code
 parameters:
-  - in: path
-    name: class
-    description: a cidocCRM class code eg E21
+  - name: class
+    in: path
+    description: Need to be a Entity class of the CIDOC CRM (e.g. E21, E18, E33)
     required: true
     schema:
       type: string
-      enum:
-        - actor
-        - event
-        - place
-        - reference
-        - source
-        - object
-  - in: query
-    name: limit
-    description: number of geojson representations to be returned
-    schema:
-      type: number
-  - in: query
-    name: column
-    description: the column wich should be sorted and filtered
-    schema:
-      type: string
-      enum:
-        -  id
-        -  class_code
-        -  name
-        -  description
-        -  created
-        -  modified
-        -  system_type
-        -  begin_from
-        -  begin_to
-        -  end_from
-        -  end_to
-  - in: query
-    name: sort
-    description: sort direction asc/desc
-    schema:
-      type: string
-      enum:
-        - asc
-        - desc
-  - in: query
-    name: filter
-    description: filter operator to be applied
-    schema:
-      type: string
-  - in: query
-    name: first
-    description: first id of a page
-    schema:
-      type: number
-  - in: query
-    name: last
-    description: last id of a page
-    schema:
-      type: number
-  - in: query
-    name: show
-    description: select which key should be shown e.g. when, types, relations, names, links, geometry, depictions, not
-    schema:
-      type: string
-      enum:
-        - when
-        - types
-        - relations
-        - names
-        - links
-        - geometry
-        - depictions
-        - not
-  - in: query
-    name: count
-    description: returns only how many results the API query gets
-    schema:
-      type: boolean
-  - in: query
-    name: download
-    description: triggers a file download of the result.
-    schema:
-      type: boolean
+  - $ref: '#/components/parameters/limitParam'
+  - $ref: '#/components/parameters/columnParam'
+  - $ref: '#/components/parameters/sortParam'
+  - $ref: '#/components/parameters/filterParam'
+  - $ref: '#/components/parameters/firstParam'
+  - $ref: '#/components/parameters/lastParam'
+  - $ref: '#/components/parameters/showParam'
+  - $ref: '#/components/parameters/countParam'
+  - $ref: '#/components/parameters/downloadParam'
 responses:
   '200':
     description: a geojson representation of the specified entity
     content:
-        application/ld+json:
-          schema:
-            properties:
-              type:
-                type: string
-                enum:
-                  - FeatureCollection
-              features:
-                type: array
-                items:
+      application/ld+json:
+        schema:
+          properties:
+            type:
+              type: string
+              enum:
+                - FeatureCollection
+            features:
+              type: array
+              items:
+                type:
+                  type: string
+                  enum:
+                    - Feature
+                geometry:
                   type:
                     type: string
                     enum:
-                      - Feature
-                  geometry:
-                    type:
-                      type: string
-                      enum:
-                        - Point
-                        - MultiPoint
-                        - LineString
-                        - MultiLineString
-                        - Polygon
-                        - MultiPolygon
-                        - GeometryCollection
-                  properties:
-                    type: object
-                    nullable: true
-                  id:
-                    oneOf:
-                      - type: string
-                      - type: integer
-              links:
-                type: array
-                items:
-                  href:
-                    type: string
-                  rel:
-                    type: string
-                    example: prev
-                  type:
-                    type: string
-                    example: application/geo+json
-                  hreflang:
-                    type: string
-                    example: en
-              timeStamp:
-                type: string
-                format: dateTime
-              numberMatched:
-                type: integer
-                minimum: 0
-              numberReturned:
-                type: integer
-                minimum: 0
+                      - Point
+                      - MultiPoint
+                      - LineString
+                      - MultiLineString
+                      - Polygon
+                      - MultiPolygon
+                      - GeometryCollection
+                properties:
+                  type: object
+                  nullable: true
+                id:
+                  oneOf:
+                    - type: string
+                    - type: integer
+            links:
+              type: array
+              items:
+                href:
+                  type: string
+                rel:
+                  type: string
+                  example: prev
+                type:
+                  type: string
+                  example: application/geo+json
+                hreflang:
+                  type: string
+                  example: en
+            timeStamp:
+              type: string
+              format: dateTime
+            numberMatched:
+              type: integer
+              minimum: 0
+            numberReturned:
+              type: integer
+              minimum: 0
   '404':
     description: not found
